# BeatPad

./: .gitignore  .gitmodules  build.gradle  gradle.properties  gradlew
.circleci/: config.yml
app/: build.gradle  proguard-rules.pro
app/jniLibs/: CMakeLists.txt  fluidsynth.h  native-lib.cpp
app/jniLibs/fluidsynth/: version.h
app/src/free/res/drawable/: splash_background.xml
app/src/free/res/values/: styles.xml
app/src/full/res/drawable/: splash_background.xml
app/src/full/res/mipmap-anydpi-v26/: launcher_icon_free_adaptive_round.xml
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/kotlin/fluidsynth/: FluidSynthJNI.kt  FluidSynthMidiReceiver.kt
app/src/main/kotlin/fluidsynth_android_opensles/: MainActivity.kt
app/src/main/res/drawable/: beatscratch_icon.xml  beatscratch_icon_black_piano.xml  beatscratch_icon_free_toolbar.xml  beatscratch_icon_inset.xml  beatscratch_icon_inset_black_piano.xml  beatscratch_icon_inset_slight.xml  beatscratch_icon_inset_slight_black_piano.xml  beatscratch_icon_inset_slight_transparent_keys.xml  beatscratch_icon_notification.xml  beatscratch_icon_notification_inset_slight.xml  beatscratch_icon_toolbar.xml  beatscratch_icon_transparent_keys.xml  check_mark.xml  doubleflat.xml  flat.xml  (+94 more)
app/src/test/kotlin/: ChordTest.kt
fluidsynthjna/: .gitignore  Makefile  build.gradle
fluidsynthjna/libs/: _jnaerator.macros.cpp  _jnaerator.normalizedParsed.cpp  _jnaerator.preprocessed.c  _jnaerator.rawParsed.cpp
gradle/wrapper/: gradle-wrapper.properties
ktmidi/: build.gradle
(+499 files in other folders)
